--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -377,7 +377,7 @@
       },
       "args": {}
     },
-    "app:push-config": {
+    "app:push": {
       "id": "app:push-config",
       "description": "Push your toml configuration to the Partners Dashboard.",
       "strict": true,
@@ -403,7 +403,7 @@
       },
       "args": {}
     },
-    "app:pull-config": {
+    "app:pull": {
       "id": "app:pull-config",
       "description": "Pull your Shopify app configuration to your toml file.",
       "strict": true,
