--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -404,7 +404,7 @@
       "args": {}
     },
     "app:pull": {
-      "id": "app:pull-config",
+      "id": "app:pull",
       "description": "Pull your Shopify app configuration to your toml file.",
       "strict": true,
       "pluginName": "@shopify/app",
