--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -378,7 +378,7 @@
       "args": {}
     },
     "app:push": {
-      "id": "app:push-config",
+      "id": "app:push",
       "description": "Push your toml configuration to the Partners Dashboard.",
       "strict": true,
       "pluginName": "@shopify/app",
