--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -429,7 +429,7 @@
       },
       "args": {}
     },
-    "config:create": {
+    "app:config-create": {
       "id": "app:config-create",
       "description": "lala",
       "strict": true,
@@ -453,7 +453,11 @@
           "allowNo": false
         }
       },
-      "args": {}
+      "args": {
+        "name": {
+          "name": "string"
+        }
+      }
     },
     "webhook:trigger": {
       "id": "webhook:trigger",
