add app env arg to app pull

--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -433,7 +433,11 @@
           "allowNo": false
         }
       },
-      "args": {}
+      "args": {
+        "app-env": {
+          "name": "string"
+        }
+      }
     },
     "app:config-create": {
       "id": "app:config-create",
