--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -407,7 +407,11 @@
           "allowNo": false
         }
       },
-      "args": {}
+      "args": {
+        "app-env": {
+          "name": "string"
+        }
+      }
     },
     "app:pull": {
       "id": "app:pull",
