app create accepts optional app env

--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -1039,7 +1039,11 @@
           "allowNo": false
         }
       },
-      "args": {}
+      "args": {
+        "app-env": {
+          "name": "string"
+        }
+      }
     }
   }
 }
