--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -399,6 +399,36 @@
       },
       "args": {}
     },
+    "app:use": {
+      "id": "app:use",
+      "description": "Choose which toml file to use.",
+      "strict": true,
+      "pluginName": "@shopify/app",
+      "pluginAlias": "@shopify/app",
+      "pluginType": "core",
+      "aliases": [],
+      "flags": {
+        "environment": {
+          "name": "environment",
+          "type": "option",
+          "description": "The environment to apply to the current command.",
+          "hidden": true,
+          "multiple": false
+        },
+        "verbose": {
+          "name": "verbose",
+          "type": "boolean",
+          "description": "Increase the verbosity of the logs.",
+          "hidden": false,
+          "allowNo": false
+        }
+      },
+      "args": {
+        "toml": {
+          "name": "string"
+        }
+      }
+    },
     "webhook:trigger": {
       "id": "webhook:trigger",
       "description": "Trigger delivery of a sample webhook topic payload to a designated address.",
