introduce clear cache, automatically use on connect and show used config on dev

--- a/packages/app/oclif.manifest.json
+++ b/packages/app/oclif.manifest.json
@@ -421,6 +421,13 @@
           "description": "Increase the verbosity of the logs.",
           "hidden": false,
           "allowNo": false
+        },
+        "clear": {
+          "name": "verbose",
+          "type": "boolean",
+          "description": "Increase the verbosity of the logs.",
+          "hidden": false,
+          "allowNo": false
         }
       },
       "args": {
