--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -46,10 +46,13 @@
     "@shopify/cli-kit": "3.47.0",
     "@shopify/function-runner": "4.1.0",
     "@shopify/plugin-cloudflare": "3.47.0",
+    "@shopify/shopify-api": "7.5.0",
     "abort-controller": "3.0.0",
+    "body-parser": "^1.20.2",
     "chokidar": "3.5.3",
     "diff": "5.1.0",
     "esbuild": "0.18.11",
+    "express": "4.18.2",
     "graphql-request": "5.2.0",
     "h3": "0.7.21",
     "http-proxy": "1.18.1",
@@ -58,15 +61,17 @@
     "ws": "8.13.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/diff": "^5.0.3",
+    "@types/express": "^4.17.17",
     "@types/http-proxy": "^1.17.11",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "14.18.53",
     "@types/serve-static": "^1.15.2",
     "@types/ws": "^8.5.5",
+    "@vitest/coverage-istanbul": "^0.32.2",
     "graphql": "^16.0.0",
     "graphql-tag": "^2.12.6",
-    "@vitest/coverage-istanbul": "^0.32.2",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
   },
