--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -55,7 +55,9 @@
     "http-proxy": "1.18.1",
     "javy-cli": "0.1.7",
     "serve-static": "1.15.0",
-    "ws": "8.13.0"
+    "ws": "8.13.0",
+    "langchain": "0.0.117",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@types/diff": "^5.0.3",
