Default to no tunnel

--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,5 @@ public-hoist-pattern[]=*vitest*
 public-hoist-pattern[]=*vite*
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*prettier*
+enable-pre-post-scripts=true
 @shopify:registry=https://registry.npmjs.org/
