--- a/packages/cli-kit/package.json
+++ b/packages/cli-kit/package.json
@@ -130,6 +130,7 @@
     "ink": "4.2.0",
     "is-interactive": "2.0.0",
     "js-yaml": "4.1.0",
+    "json-schema-to-zod": "1.1.1",
     "kill-port-process": "3.1.0",
     "latest-version": "7.0.0",
     "liquidjs": "10.8.3",
