--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -58,7 +58,9 @@
     "ws": "8.13.0",
     "langchain": "0.0.117",
     "zod": "3.21.4",
-    "hnswlib-node": "2.0.0"
+    "hnswlib-node": "2.0.0",
+    "pkg-dir": "7.0.0",
+    "clipboardy": "3.0.0"
   },
   "devDependencies": {
     "@types/diff": "^5.0.3",
