--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -58,9 +58,9 @@
     "ws": "8.13.0",
     "langchain": "0.0.117",
     "zod": "3.21.4",
-    "hnswlib-node": "2.0.0",
     "pkg-dir": "7.0.0",
-    "clipboardy": "3.0.0"
+    "clipboardy": "3.0.0",
+    "@pinecone-database/pinecone": "0.1.6"
   },
   "devDependencies": {
     "@types/diff": "^5.0.3",
