Add Bottleneck dependency

--- a/packages/cli-kit/package.json
+++ b/packages/cli-kit/package.json
@@ -103,6 +103,7 @@
     "abort-controller": "3.0.0",
     "ansi-escapes": "6.2.0",
     "archiver": "5.3.1",
+    "bottleneck": "^2.19.5",
     "chalk": "5.3.0",
     "change-case": "4.1.2",
     "color-json": "3.0.5",
@@ -159,8 +160,8 @@
     "@types/commondir": "^1.0.0",
     "@types/cross-zip": "^4.0.0",
     "@types/diff": "^5.0.3",
-    "@types/git-diff": "^2.0.3",
     "@types/fs-extra": "9.0.13",
+    "@types/git-diff": "^2.0.3",
     "@types/gradient-string": "^1.1.2",
     "@types/lodash": "4.14.195",
     "@types/node": "14.18.53",
