--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -54,11 +54,9 @@
     "esbuild": "0.18.17",
     "express": "4.18.2",
     "graphql-request": "5.2.0",
-    "ink": "4.4.1",
     "h3": "0.7.21",
     "http-proxy": "1.18.1",
     "javy-cli": "0.1.8",
-    "react": "18.2.0",
     "serve-static": "1.15.0",
     "ws": "8.13.0"
   },
@@ -77,6 +75,10 @@
     "graphql-tag": "^2.12.6",
     "vite": "^4.4.8",
     "vitest": "^0.34.1"
+  },
+  "peerDependencies": {
+    "ink": "4.4.1",
+    "react": "18.2.0"
   },
   "engines": {
     "node": ">=14.17.0"
